--- a/461/style.css
+++ b/461/style.css
@@ -1,8 +1,8 @@
 
 
 body, html {
-  --col-acc: #77B6EA;
-  --col-acc-hover: rgb(65, 152, 223);
+  --col-acc: #e6b76f;
+  --col-acc-hover: #ffdfb0;
   --col-bg: #37393A;
   --col-text: #fffffff1;
   --scrollbar-width: 6px;
@@ -25,7 +25,8 @@ body, html {
 .column {
   float: left;
   width: 50%;
-  height: 100%
+  height: 100%;
+  display: flex;
 }
 
 h1 {
@@ -43,14 +44,13 @@ h2 {
 h3 {
   margin: 0;
   font-size: 20px;
-  font-weight: 600
+  font-weight: 600;
 }
 
 h4 {
   margin: 0;
   font-size: 19px;
   font-weight: 300;
-  font-style: italic
 }
 
 .button, button {
@@ -87,7 +87,7 @@ h4 {
 }
 
 .home {
-  background-image: url(img/6.png);
+  background-image: url(img/0.jpg);
   background-size: 100vw
 }
 
@@ -124,22 +124,28 @@ h4 {
 
 .list {
   text-align: center;
-  padding-left: 0;
-  margin-left: 0;
-  margin-top: 35%;
-  width: 30%;
-  list-style: none
+  width: 50%;
+  list-style: none;
+}
+
+.content-index1{
+  width: 65%;
+  float:left;
+  display:flex;
+  justify-content: space-between;
+  margin: auto auto;
 }
 
 .list li {
   /*margin-top: 5px;
   margin-bottom: 5px;*/
   background-color: var(--col-acc);
-  padding: 10px;
   font-size: 1.3em;
   /* border-radius: 25px; */
   transition: background-color 1s, color 1s;
+  padding: 2em 1em;
   color: rgba(0, 0, 0, .548);
+  margin: .5em 0em;
 }
 
 #item_1{
@@ -211,13 +217,13 @@ h4 {
 }
 
 .index1 {
-  background-image: url(img/7.jpg);
+  background-image: url(img/2.jpg);
   background-size: 100vw;
   background-position: center
 }
 
 .index2 {
-  /*background-image: url(img/7.jpg);*/
+  background-image: url(img/3.jpg);
   background-size: 100vw;
   background-position: center
 }
@@ -229,9 +235,10 @@ h4 {
 }
 
 .intro {
-  /*margin-left: 50%;*/
+  /*margin-left: 50%;
   margin-left: 50%;
-  margin-top: 40%;
+  margin-top: 40%;*/
+  margin: auto auto;
   float: left;
   text-align: center
 }
@@ -261,7 +268,7 @@ h3 {
 }
 
 .radios {
-  background-image: url(img/3.png);
+  background-image: url(img/1.jpg);
   background-size: 100vw
 }
 
@@ -270,7 +277,10 @@ h3 {
   position: absolute;
   left: 50vw;
   transform: translate(-50%, -50%);
-  text-align: center
+  text-align: center;
+  padding: 2em;
+  border-radius: 1em;
+  background-color: rgb(55, 57, 58, 0.6);
 }
 
 .radios-wrapper button {
@@ -299,7 +309,7 @@ h3 {
   left: 0;
   height: var(--rb-size);
   width: var(--rb-size);
-  background-color: var(--col-bg);
+  background-color: rgb(255, 255, 255, 0.5);
   border-radius: 50%
 }
 
